# turb-t2-paper

./: .gitignore  LICENSE  README.md  hello.py  pyproject.toml  turb-t2-paper.tex
hii-utils/: README.md  hii_utils.py  pyproject.toml  test_hii_utils.py
notebooks/: oxygen-emissivities-marimo.py  oxygen-emissivities.ipynb  oxygen-emissivities.py  plasmapy-explore-marimo.py  plasmapy-explore.ipynb
notebooks/.ipynb_checkpoints/: plasmapy-explore-checkpoint.ipynb
notes/: chatgpt-logs.ipynb  chatgpt-logs.md  intermittency-hii-regions.org  plasmapy-tests.org  t2-in-simulation.org  t2-models.org  t2-observations.org  turbulent-dissipation.org
paper/: turb-t2-paper-I.tex  turb-t2-paper-II.tex  turb-t2-paper.tex  turb-t2-refs.bib
