[project]
name = "turb-t2-paper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hii-utils",
    "jupyter>=1.1.1",
    "plasmapy>=2024.10.0",
]

[tool.uv.workspace]
members = ["hii-utils"]

[tool.uv.sources]
hii-utils = { workspace = true }

