[project]
name = "turb-t2-paper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hii-utils",
    "jupyter>=1.1.1",
    "numpy>=2.1.3",
    "plasmapy>=2024.10.0",
    "pyneb>=1.1.21",
    "seaborn>=0.13.2",
]

[tool.uv]
no-build-isolation-package = ["pyneb"]

[tool.uv.workspace]
members = ["hii-utils"]

[tool.uv.sources]
hii-utils = { workspace = true }

