[project]
name = "hii-utils"
version = "0.1.0"
description = "Ionization parameter and other global properties of H II regions"
readme = "README.md"
authors = [
    { name = "William Henney", email = "will@henney.org" }
]
requires-python = ">=3.12"
dependencies = [
    "astropy>=6.1.6",
    "numpy>=2.1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.3",
]
